@startuml DiagramaUML-DetallePreguntas-TP2

skinparam classAttributeIconSize 0

abstract Question{
    + id : long
    + text : String
    + options : List<GameOption>
    # correctOptions : List<GameOption>
    - {abstract}calculatePoints() : int
    - {abstract}hasPenalty() : Boolean
}

class TrueFalseQuestion{
    - calculatePoints(List<GameOption> selectedOptions) : int
    - hasPenalty() : Boolean
}

class TrueFalseWithPenaltyQuestion{
    - calculatePoints(List<GameOption> selectedOptions) : int
    - hasPenalty() : Boolean
}

class OrderedChoiceQuestion{
    - calculatePoints(List<GameOption> selectedOptions) : int
    - hasPenalty() : Boolean
}

class MultipleChoiceQuestion{
    - calculatePoints(List<GameOption> selectedOptions) : int
    - hasPenalty() : Boolean
}

class MultipleChoiceWithPenaltyQuestion{
    - calculatePoints(List<GameOption> selectedOptions) : int
    - hasPenalty() : Boolean
}

class GroupChoiceQuestion{
    - calculatePoints(List<GameOption> selectedOptions) : int
    - hasPenalty() : Boolean
}


TrueFalseQuestion --|> Question
TrueFalseWithPenaltyQuestion --|> Question

OrderedChoiceQuestion --left|> Question

MultipleChoiceQuestion --up|> Question
MultipleChoiceWithPenaltyQuestion --up|> Question

GroupChoiceQuestion --right|> Question

@enduml